# apc-hypaship

./: .gitignore  pyproject.toml
.run/: APC TESTS.run.xml
src/apc_hypaship/: address.py  apc_client.py  config.py  error.py  services.py  shipment.py
src/apc_hypaship/client/: apc_client.py
src/apc_hypaship/models/request/: address.py  services.py  shipment.py
src/apc_hypaship/models/response/: address.py  common.py  label_track.py  parcelspecs.py  resp.py  service.py  shipment.py
src/apc_hypaship/reqresp/: order_response.py
tests/: conftest.py  live.py  test_apc.py  test_live.py
