[project]
name = "apc-hypaship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "paw", email = "pawrequest@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
]

[project.scripts]
#apc-hypaship = "apc_hypaship:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[tool.uv.sources]
